# scryfall

./: LICENSE  README.md  scryfall.cabal  stack.yaml
src/Data/: Scryfall.hs
src/Data/Scryfall/: Card.hs  Internal.hs  JSON.hs  Misc.hs  Request.hs  Set.hs  Symbol.hs
tests/: Test.hs
tests/JSON/: Examples.hs  TH.hs
tests/examples/: badSearch.json  delver.json  ixalan.json  landTypes.json  ledRuling.json  notFound.json  parseMana.json  progenitus.json  symbology.json  taoistHermit.json  wolves.json
